--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,9 @@ python = "^3.11"
 polars = "^0.19.5"
 jupyterlab = "^4.0.6"
 jupytext = "^1.15.2"
+matplotlib = "^3.8.0"
+ipywidgets = "^8.1.1"
+sympy = "^1.12"
 
 
 [tool.poetry.group.dev.dependencies]
