--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ pytest = "^7.4.2"
 pytest-cov = "^4.1.0"
 ruff = "^0.0.291"
 ruff-lsp = "^0.0.39"
+ipykernel = "^6.25.2"
 
 [build-system]
 requires = ["poetry-core"]
