--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "polar-jupyter"
 version = "0.1.0"
-description = ""
+description = "Scratchspace for exploring Polars with Python & Jupyter"
 authors = ["Ethan Skowronski-Lutz <33399972+ethanmsl@users.noreply.github.com>"]
 readme = "README.md"
 
@@ -17,7 +17,7 @@ python-dotenv = "^1.0.0"
 httpx = "^0.25.2"
 structlog = "^23.2.0"
 pydantic = "^2.5.2"
-pendulum = "^2.1.2"
+arrow = "^1.3.0"
 
 
 [tool.poetry.group.dev.dependencies]
