--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,6 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.12"
-polars = "^0.19.5"
 jupyterlab = "^4.0.6"
 jupytext = "^1.15.2"
 matplotlib = "^3.8.0"
@@ -18,6 +17,7 @@ httpx = "^0.25.2"
 structlog = "^23.2.0"
 pydantic = "^2.5.2"
 arrow = "^1.3.0"
+polars = {version = "^0.19.19", extras = ["all"]}
 
 
 [tool.poetry.group.dev.dependencies]
@@ -36,7 +36,6 @@ hypothesis = "^6.91.1"
 
 
 [tool.poetry.group.user.dependencies]
-polars = "^0.19.19"
 jupyterlab = "^4.0.9"
 notebook = "^7.0.6"
 jupytext = "^1.16.0"
