--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,9 +15,9 @@ sympy = "^1.12"
 python-dotenv = "^1.0.0"
 httpx = "^0.25.2"
 structlog = "^23.2.0"
-pydantic = "^2.5.2"
 arrow = "^1.3.0"
 polars = {version = "^0.19.19", extras = ["all"]}
+pydantic = {version = "^2.5.2", extras = ["email,dotenv"]}
 
 
 [tool.poetry.group.dev.dependencies]
